<resources>
    <string name="app_name">Pay Calculator</string>
    <string name="about_name">About</string>
    <string name="total_pay">Total Pay</string>
    <string name="calculate">Calculate</string>
    <string name="enter_hours_worked">Enter Hours Worked</string>
    <string name="enter_hourly_rate">Enter Hourly Rate</string>
    <string name="pay">Pay</string>
    <string name="default_dollar">$0.00</string>
    <string name="overtime_pay">Overtime Pay</string>
    <string name="tax">Tax</string>
    <string name="name">Janit Sriganeshaelankovan</string>
    <string name="student_id">101229102</string>
    <string name="about">About</string>
</resources>